--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,8 @@
     <color name="primary">#FF6B35</color>
     <color name="on_surface">#FFFFFF</color>
     <color name="on_surface_variant">#B8B8B8</color>
+
+    <!-- SplashScreen colors -->
+    <color name="splash_background">#E65100</color>
+    <color name="splash_icon_background">#E65100</color>
 </resources>
